Grease Pencil: Set Origin do not refresh until GP object is moved #68202

Closed
opened 2019-08-04 03:10:47 +02:00 by VLC · 3 comments

System Information
Operating system: Windows-10-10.0.16299 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 416.94

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f5449
Worked: (optional)

Short description of error
When you need to move the origin of one Grease Pencil object and you try set the origin, the origin is changed but move the GP object, I think that like an unfinished the process. Only once you moved the Grease Pencil object the process is finished changing the origin.greasePencilOriginBug.blend

Exact steps for others to reproduce the error
1_create a Grease Pencil object(a Suzanne for example) if you do not download the blend file.
2_then try to move the origin with any way you desire.
3_Only refresh the origin change when you are in Object Mode and you move, rotate o scale the GP object.

**System Information** Operating system: Windows-10-10.0.16299 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 416.94 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: `f6cb5f5449` Worked: (optional) **Short description of error** When you need to move the origin of one Grease Pencil object and you try set the origin, the origin is changed but move the GP object, I think that like an unfinished the process. Only once you moved the Grease Pencil object the process is finished changing the origin.[greasePencilOriginBug.blend](https://archive.blender.org/developer/F7648065/greasePencilOriginBug.blend) **Exact steps for others to reproduce the error** 1_create a Grease Pencil object(a Suzanne for example) if you do not download the blend file. 2_then try to move the origin with any way you desire. 3_Only refresh the origin change when you are in Object Mode and you move, rotate o scale the GP object.
Author

Added subscriber: @VLC

Added subscriber: @VLC
VLC changed title from Grease Pencil: Set Origin do not refresh until GP object is movedA to Grease Pencil: Set Origin do not refresh until GP object is moved 2019-08-04 03:11:27 +02:00
Antonio Vazquez self-assigned this 2019-08-04 09:05:50 +02:00

This issue was referenced by dd3cdf6f1e

This issue was referenced by dd3cdf6f1e9d7b19cc0b4bb85136a12e558e291d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68202
No description provided.