Fix T68202: GPencil Set Origin do not refresh until object is moved